Fixed trigger madness aka overlapping triggers. This doesn't look as before, as ExtJS 4.1 uses tables instead of floating div's now - probably fix that later. But very low priority for now, looks pretty much OK to me.

--- a/src/frontend/css/PartKeepr.css
+++ b/src/frontend/css/PartKeepr.css
@@ -1,13 +1,3 @@
-.x-trigger-index-0 {
-	position: relative;
-	right: 16px;
-}
-
-.x-trigger-index-1 {
-	position: relative;
-	right: 32px;
-}
-
 .x-form-spinner-down {
 	right: 16px;	
 }
